fixed menu spacing

--- a/engage/engage_style.css
+++ b/engage/engage_style.css
@@ -20,7 +20,6 @@ html, body {
 }
 
 .logo {
-    width: 9%;
     display: inline;
     padding: 5% 0 0 3%;
 }
@@ -34,7 +33,7 @@ html, body {
 }
 
 .menu-links {
-    padding: 5% 0 0 0%;
+    padding: 5% 0 0 45%;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 25px;
     font-weight: bold;
